; ModuleID = '/home/carl/AnghaBench/mozjpeg/extr_turbojpeg.c_tjDestroy.c'
source_filename = "/home/carl/AnghaBench/mozjpeg/extr_turbojpeg.c_tjDestroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@this = common dso_local global %struct.TYPE_5__* null, align 8
@COMPRESS = common dso_local global i32 0, align 4
@cinfo = common dso_local global i32 0, align 4
@DECOMPRESS = common dso_local global i32 0, align 4
@dinfo = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tjDestroy(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i32 @getinstance(i32 %4)
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** @this, align 8
  %7 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 1
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i64 @setjmp(i32 %9) #3
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %36

13:                                               ; preds = %1
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** @this, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @COMPRESS, align 4
  %18 = and i32 %16, %17
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %13
  %21 = load i32, i32* @cinfo, align 4
  %22 = call i32 @jpeg_destroy_compress(i32 %21)
  br label %23

23:                                               ; preds = %20, %13
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** @this, align 8
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load i32, i32* @DECOMPRESS, align 4
  %28 = and i32 %26, %27
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %33

30:                                               ; preds = %23
  %31 = load i32, i32* @dinfo, align 4
  %32 = call i32 @jpeg_destroy_decompress(i32 %31)
  br label %33

33:                                               ; preds = %30, %23
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** @this, align 8
  %35 = call i32 @free(%struct.TYPE_5__* %34)
  store i32 0, i32* %2, align 4
  br label %36

36:                                               ; preds = %33, %12
  %37 = load i32, i32* %2, align 4
  ret i32 %37
}

declare dso_local i32 @getinstance(i32) #1

; Function Attrs: returns_twice
declare dso_local i64 @setjmp(i32) #2

declare dso_local i32 @jpeg_destroy_compress(i32) #1

declare dso_local i32 @jpeg_destroy_decompress(i32) #1

declare dso_local i32 @free(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
